
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

void logo()
{
 printf(" ####################################################################### \n");
 printf(" #     ____                 __  _                  ______  __    _____ #\n");
 printf(" #    / __ \\________  _____/ /_(_)_________       / __/\\ \\/ /   / _  / #\n");
 printf(" #   / / / / ___/ _ \\/ __ / __/ / ___/ __ / ___  / /    \\  /   / // /  #\n");
 printf(" #  / /_/ / / /  ___/ /_// /_/ / /__/ /_// /__/ / _/    /  \\  / ___/   #\n");
 printf(" # /_____/_/  \\___/ \\_,_/\\__/_/\\___/\\__,_/     /_/     /_/\\_\\/_/       #\n");
 printf(" #                                 crew                                #\n");
 printf(" ####################################################################### \n");
 printf(" #  Exploit : Frontbase <= 4.2.7 for Windows (multiple targets)        # \n");
 printf(" #  Tested  : Frontbase 4.1.16 and 4.2.7                               # \n");
 printf(" #  Author  : Heretic2 (heretic2x@gmail.com)                           # \n");
 printf(" #  Version : 2.2                                                      # \n");
 printf(" #  System  : Windows XP SP0-SP2                                       # \n");
 printf(" #  Date    : 02.04.2007                                               # \n");
 printf(" # ------------------------------------------------------------------- # \n");
}
